--- a/kaizer.htm
+++ b/kaizer.htm
@@ -1,3 +1,48 @@
-kaizer buradaydı!
-hacked by kaizer defacer- turkish hacker
-kaizersec@gmail.com
+<title>Hacked by Kaizer Soze</title><style type="text/css">
+<head>
+	<meta charset="utf-8">
+</head>
+<!--
+body {
+	background-color: #000000;
+	background-image: url(index.html);
+}
+body,td,th {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 17px;
+	color: #FFFFFF; 
+}
+.style2 {font-family: Impact; font-size: 70px;}
+.style4 {color: #FF0000}
+.style6 {color: #00FF00}
+-->
+</style>
+<div align="center">
+  <p><span class="style2">hacked by Kaizer Defacer & Katib </span>I want to leave a word from Mustafa Kemal Ataturk here. Says: 
+"We are not enemies of any race & religion, only enemies of terrorists and terrorist countries!"</p>
+   <p><img src="https://kaizerdefacer.files.wordpress.com/2020/10/ata.jpg" width="300" height="400"></p>
+
+ <p>&nbsp;</p>
+  <p class="style4">
+iyice Dinle!</p>
+  <p>Sen beni tanimazsin. Ben arkamda cok zone biraktim. Cok lameri aglattim. Bir ton bela ve kiytiriktan  herifin sitesine yada sunucusuna gozumu bile kirpmadan bastim, Verilerini silip darmadagin ettim. zoneleri bile coktan curudu. Bunlarin bir kismi bilinir, bir kismi bilinmez. Sonunda bazi seyler oldu ve ben klavyemi biraktim. Tovbe ettim. Uzun zamandan beri beladan uzak, sakin bir hayat yasiyorum. Yalniz, biliyor musun ? Ben hastayim, bu hastalik sey; unutuyorsun. Herkesi, herseyi unutuyorsun Kafanda ne varsa silinip gidiyor, sifir oluyorsun amk.</p>
+  <p>Bu ne demek biliyor musun?</p>
+  <p>Su demek; size suracikta index atsam yada o dandik sunucunuzu 10 dk icinde sustursam, zerre kadar vicdan azabi cekmeyecegimi biliyorum. Cunku yeminimi unutacagim. Sisteme nasil sizip, nasil bypassladigimi,Fotinetin bile ta amina koyup yedekler dahil Storageleri tertemiz ettigimi, o sefil serverinin nasil dagildigini asla hatirlayamayacagim bile. her neyse siktiret,  Yani kisaca benim acimdan artik Allahtan gayrsina tovbe diye bir sorun yok. selametle... </p>
+
+<style>
+body {
+background-image:url("http://bestanimations.com/Nature/Fire/fire-animated-gif-4.gif");
+background-size:65%; background-color:black;
+background-position:bottom; background-repeat:no-repeat; }
+</style>
+<br><br><br>
+
+ <p><span class="style4">Kaizer Soze - TheWayEnd - Katib - Civi.Fred - Cengizhan - Maress - Reflex</span><br />
+<div style="color:white;font:15pt Courier New;"><b>Copyright 2010-2020 contact:Kaizersec@gmail.com ./Turkish Hacker </b></font></div><br>
+<p class="style1" align="center"><img src="https://i.pinimg.com/originals/f9/bc/c2/f9bcc28d5d1ac4d51f4c0f79f1b56d9b.jpg" height="38" width="75"></p>
+  </p>
+ <p>&nbsp;</p>
+  <p>&nbsp;</p>
+  <p><br />
+  </p>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/UQGmxezfMSs?rel=0&amp;autoplay=1" frameborder="0" < div>
